--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,12 +1,21 @@
+<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+
 <div layout-gt-sm="row">
     <div flex-gt-sm="80" flex-offset-gt-sm="10">
         <mat-card>
-            <mat-card-title id="hello-world">{{ this.text }}</mat-card-title>
-            <mat-card-subtitle>this is a card</mat-card-subtitle>
-            <mat-divider></mat-divider>
-            <mat-card-content>
-                card content
+            <mat-card-title id="i-am-sage">{{ this.text }}</mat-card-title>
+            <mat-card-content style="text-align: center">
+                <p>
+                    Welcome to I am SAGE, an educational vocabulary learning tool! <br>
+                    Please select an action below!
+                </p>
             </mat-card-content>
+        </mat-card>
+        <mat-card>
+            <mat-card-actions id="home_buttons">
+                <button mat-button color="accent" class="text-upper">Play</button>
+                <button mat-button class="text-upper">Add a Card</button>
+            </mat-card-actions>
         </mat-card>
     </div>
 </div>
