--- a/client/src/theme.scss
+++ b/client/src/theme.scss
@@ -6,8 +6,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$primary: mat-palette($mat-indigo);
-$accent:  mat-palette($mat-pink, A200, A100, A400);
+$primary: mat-palette($mat-light-blue, A700);
+$accent:  mat-palette($mat-deep-purple, A400);
 
 // The warn palette is optional (defaults to red).
 $warn:    mat-palette($mat-red);
@@ -21,3 +21,4 @@ $theme: mat-light-theme($primary, $accent, $warn);
 // that you are using.
 @include angular-material-theme($theme);
 @include covalent-theme($theme);
+
