Fix testing in home.component.spec.ts

--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -1,7 +1,8 @@
 #i-am-sage {
     text-align: center;
-    font-size: 52pt;
+    font-size: 78pt;
     font-family: 'Permanent Marker', cursive;
+    color: #6200EA;
 }
 
 #home_buttons {
