--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -4,10 +4,9 @@
     <div flex-gt-sm="80" flex-offset-gt-sm="10">
         <mat-card>
             <mat-card-title id="i-am-sage">{{ this.text }}</mat-card-title>
-            <mat-card-content style="text-align: center">
+            <mat-card-content style="text-align: center; font-size: 28pt;">
                 <p>
-                    Welcome to I am SAGE, an educational vocabulary learning tool! <br>
-                    Please select an action below!
+                    Welcome to I am SAGE, an educational vocabulary learning tool!
                 </p>
             </mat-card-content>
         </mat-card>
