Disable testing from default clone

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -6,7 +6,7 @@
             <a mat-list-item [routerLink]="['/addcards']" (click)="layout.close()" routerLinkActive="nav-active"><mat-icon>add</mat-icon>Add a Card</a>
         </mat-nav-list>
     </td-navigation-drawer>
-    <td-layout-nav toolbarTitle="I am SAGE" navigationRoute="/">
+    <td-layout-nav icon="home" navigationRoute="/">
         <button mat-icon-button td-menu-button tdLayoutToggle>
             <mat-icon>menu</mat-icon>
         </button>
