--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -12,8 +12,8 @@
         </mat-card>
         <mat-card>
             <mat-card-actions id="home_buttons">
-                <button mat-button color="accent" class="text-upper">Play</button>
-                <button mat-button class="text-upper">Add a Card</button>
+                <button mat-button color="accent" class="text-upper" routerLink="/users">Play</button>
+                <button mat-button class="text-upper" routerLink="/addcards">Add a Card</button>
             </mat-card-actions>
         </mat-card>
     </div>
