--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -12,7 +12,7 @@
         </mat-card>
         <mat-card>
             <mat-card-actions id="home_buttons">
-                <button mat-button color="accent" class="text-upper" routerLink="/users">Play</button>
+                <button mat-button color="accent" class="text-upper" routerLink="/play">Play</button>
                 <button mat-button class="text-upper" color="accent" routerLink="/addcards">Add a Card</button>
             </mat-card-actions>
         </mat-card>
