--- a/client/src/app/createcards/sage-list.component.html
+++ b/client/src/app/createcards/sage-list.component.html
@@ -1,7 +1,7 @@
 <!-- this is an extremely simple adding mechanism that was added to make testing easier, not essential to the iteration -->
 <div layout-gt-sm="row">
     <div flex-gt-sm="80" flex-offset-gt-sm="10">
-        <mat-card>
+        <mat-card id="template-card">
             <mat-card-title>New Card</mat-card-title>
             <mat-divider></mat-divider>
             <mat-card-content>
@@ -29,17 +29,17 @@
 </div>
 <div layout-gt-sm="row">
     <div flex-gt-sm="80" flex-offset-gt-sm="10">
-        <mat-card>
-            <mat-card-title id="sage-list-title">Cards</mat-card-title>
+        <mat-card id="added-cards">
+            <mat-card-title id="sage-list-title">New Cards</mat-card-title>
             <mat-divider></mat-divider>
             <mat-card-content>
                 <mat-list *ngIf="sages; else cardsError">
                     <mat-list-item id="sages" *ngFor="let sage of this.showSages()" class="list-group-item">
-                        Word: {{ sage.word }} ||
-                        Synonym: {{ sage.synonym }} ||
-                        Antonym: {{ sage.antonym }} ||
-                        General Sense: {{ sage.gensense }} ||
-                        Example: {{ sage.example }}
+                        <div id="word"> Word: {{ sage.word }} </div>
+                        <div class="S"> Synonym: {{ sage.synonym }} </div>
+                        <div class="A"> Antonym: {{ sage.antonym }} </div>
+                        <div class="G"> General Sense: {{ sage.gensense }} </div>
+                        <div class="E"> Example: {{ sage.example }} </div>
                     </mat-list-item>
                 </mat-list>
                 <!-- Maybe this should be a pop-up instead of just a text message? Not sure. -->
