Create play page along with edit home page
Create a card that displays SAGE components. Implemented randomization of SAGE.

--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -2,7 +2,7 @@
     text-align: center;
     font-size: 78pt;
     font-family: 'Permanent Marker', cursive;
-    color: #6200EA;
+    color: #2196F3;
 }
 
 #home_buttons {
