Added e2e testing for the home screen in `home.e2e-spec.ts` and `home.po.ts`. Added e2e testing for the card creation screen in `sage-list.e2e-spec.ts` and `sage-list.po.ts`. Added e2e testing for the play page in `sageplay.e2e-spec.ts` and `sageplay.po.ts`. Added id's for simplification of e2e testing in the following html files: `sage-list.component.html, `home.component.html`, and `play.component.html`. Changed an id to a class in `play.component.html` so I could add id's to the buttons. Changed an id to a class in `play.component.css` so I could add id's to the buttons in `play.component.html`. Closes #7.

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -5,7 +5,7 @@
         <mat-card>
             <mat-card-title id="i-am-sage">{{ this.text }}</mat-card-title>
             <mat-card-content style="text-align: center; font-size: 28pt;">
-                <p>
+                <p id="sageexplain">
                     Welcome to I am SAGE, an educational vocabulary learning tool!
                 </p>
             </mat-card-content>
@@ -13,8 +13,8 @@
         <mat-card>
             <mat-card-actions id="home_buttons">
                 <div>
-                    <button mat-raised-button class="text-upper" color="primary" routerLink="/play">Play</button>
-                    <button mat-raised-button class="text-upper" color="primary" routerLink="/addcards">Add a Card</button>
+                    <button id="playbutton" mat-raised-button class="text-upper" color="primary" routerLink="/play">Play</button>
+                    <button id="addcardbutton" mat-raised-button class="text-upper" color="primary" routerLink="/addcards">Add a Card</button>
                 </div>
             </mat-card-actions>
         </mat-card>
