--- a/client/src/app/play/play.component.html
+++ b/client/src/app/play/play.component.html
@@ -1,34 +1,34 @@
 <div layout-gt-sm="row">
     <div flex-gt-sm="80" flex-offset-gt-sm="10">
         <mat-card *ngIf="sage">
-            <mat-card-title class="list-group-item">{{ sage.word }}</mat-card-title>
+            <mat-card-title id="sagesword" class="list-group-item">{{ sage.word }}</mat-card-title>
             <mat-divider></mat-divider>
             <mat-card-content>
                 <mat-list class="list-group-item">
-                    <mat-list-item id="sages" class="list-group-item" [ngClass]="{'sage-selected': selected == 1}">
+                    <mat-list-item id="sagessyn" class="list-group-item" [ngClass]="{'sage-selected': selected == 1}">
                         Synonym: {{ sage.synonym }}
                     </mat-list-item>
-                    <mat-list-item id="sages" class="list-group-item" [ngClass]="{'sage-selected': selected == 2}">
+                    <mat-list-item id="sagesant" class="list-group-item" [ngClass]="{'sage-selected': selected == 2}">
                         Antonym: {{ sage.antonym }}
                     </mat-list-item>
-                    <mat-list-item id="sages" class="list-group-item" [ngClass]="{'sage-selected': selected == 3}">
+                    <mat-list-item id="sagesgensense" class="list-group-item" [ngClass]="{'sage-selected': selected == 3}">
                         General Sense: {{ sage.gensense }}<br>
                     </mat-list-item>
-                    <mat-list-item id="sages" class="list-group-item" [ngClass]="{'sage-selected': selected == 4}">
+                    <mat-list-item id="sagesexam" class="list-group-item" [ngClass]="{'sage-selected': selected == 4}">
                         Example: {{ sage.example }}
                     </mat-list-item>
 
                 </mat-list>
 
-                <div id="buttons">
-                <button mat-raised-button color="primary" (click)="randomizeSages()">Random Sage</button>
-                <button mat-raised-button color="primary" (click)="nextSage()">Next Card</button>
-                <button mat-raised-button color="primary" (click)="didntgetSage()">Do not Know</button>
-                <button mat-raised-button color="primary" (click)="resetSage()">Reset</button>
+                <div class="sage-buttons">
+                <button id="hint" mat-raised-button color="primary" (click)="randomizeSages()">Hint</button>
+                <button id="next" mat-raised-button color="primary" (click)="nextSage()">Next Card</button>
+                <button id="dontknow" mat-raised-button color="primary" (click)="didntgetSage()">Do not Know</button>
+                <button id="reset" mat-raised-button color="primary" (click)="resetSage()">Reset</button>
                 </div>
 
                 <mat-chip-list>
-                    <mat-chip color="primary" selected="true" id="points" class="list-group-item">Total Points: {{ totalpoints }}</mat-chip>
+                    <mat-chip id="totalpoints" color="primary" selected="true" class="list-group-item">Total Points: {{ totalpoints }}</mat-chip>
                 </mat-chip-list>
 
                 <ng-template #cardsError>
