--- a/client/src/app/createcards/sage-list.component.html
+++ b/client/src/app/createcards/sage-list.component.html
@@ -1,10 +1,8 @@
 <!-- this is an extremely simple adding mechanism that was added to make testing easier, not essential to the iteration -->
 <div layout-gt-sm="row">
     <div flex-gt-sm="80" flex-offset-gt-sm="10">
-        <mat-card>
-            <mat-card-title id="NewCardTitle">New Card</mat-card-title>
         <mat-card id="template-card">
-            <mat-card-title>New Card</mat-card-title>
+            <mat-card-title id="NewCardTitle">New Card</mat-card-title>
             <mat-divider></mat-divider>
             <mat-card-content>
                 <mat-form-field>
@@ -32,7 +30,7 @@
 <div layout-gt-sm="row">
     <div flex-gt-sm="80" flex-offset-gt-sm="10">
         <mat-card id="added-cards">
-            <mat-card-title id="sage-list-title">New Cards</mat-card-title>
+            <mat-card-title id="sage-list-title">Cards</mat-card-title>
             <mat-divider></mat-divider>
             <mat-card-content>
                 <mat-list *ngIf="sages; else cardsError">
